chore: update and sync languages

--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -22,6 +22,7 @@
         "contacts": "Contatti",
         "create_account": "Crea un account",
         "create_new": "Crea un nuovo account",
+        "credit_offer": "Credit Management",
         "deactivate_suspicious_proposals": "Deactivate suspicious proposals",
         "deposit": "Deposita BTS",
         "deposit_address": "Il tuo indirizzo di deposito è il nome del tuo account",
@@ -70,6 +71,30 @@
         "intro_text_3": "<b>Il DEX</b> permette anche la creazione di asset generati dagli utenti (user-issued assets, UIA), con cui si può fare trading con altri UIA o altri asset trustless sulla piattaforma.  Un distributore molto noto sul DEX è <b>OpenLedger</b>, che offre una gamma di asset che include BTC, ETH, STEEM, DASH, LTC, DOGE e molti altri",
         "intro_text_4": "Ciò garantisce ai trader di criptovalute un unico mix di trading tradizionale e decentralizzato, il tutto con la familiare interfaccia di un exchange. Buon trading!",
         "intro_text_title": "Benvenuto su BitShares",
+        "liquidity_pools": {
+            "alert_asset_a": "ID of ASSET A should be greater than ID of ASSET B",
+            "alert_asset_b": "ID of ASSET B should be smaller than ID of ASSET A",
+            "alert_request_input_asset_a": "Please select ASSET A",
+            "alert_request_input_asset_b": "Please select ASSET B",
+            "alert_request_input_pool": "Please select pool",
+            "alert_request_input_taker_fee": "Please input taker fee",
+            "alert_request_input_unstack_fee": "Please input unstacke fee",
+            "alert_taker_fee": "",
+            "alert_unstack_fee": "",
+            "asset_a": "Asset A",
+            "asset_a_balance": "Asset A Balance",
+            "asset_b": "Asset B",
+            "asset_b_balance": "Asset B Balance",
+            "create_pool": "Create Pool",
+            "delete": "Delete",
+            "liquidity_pools": "Liquidity Pools",
+            "pool_balance": "Pool Balance",
+            "pool_name": "Pool Name",
+            "stake_status": "Stake/Unstake",
+            "taker_fee": "Taker Fee",
+            "title": "Pools",
+            "unstake_fee": "Unstake Fee"
+        },
         "login_with": "Login with",
         "market_actions": "Operazioni di mercato",
         "market_orders": "Market orders",
@@ -138,6 +163,7 @@
         "no_order_history": "No order history",
         "no_orders": "Nessun ordine aperto",
         "no_price": "Valore sconosciuto",
+        "no_trades": "No last trades",
         "open_orders": "Ordini aperti",
         "optional": {
             "formatter": "Optionally, {restore_link} or create an account using the {restore_form}.",
@@ -287,8 +313,14 @@
             "decimals": "Numero di decimali",
             "description": "Descrizione",
             "details": "Dettagli",
+            "disable_bsrm_update": "Disable owner update BSRM",
+            "disable_collateral_bidding": "Disable collateral bidding",
             "disable_confidential": "Disabilita transazioni private",
             "disable_force_settle": "Disabilita settling obbligato",
+            "disable_icr_update": "Disable owner update ICR",
+            "disable_mcr_update": "Disable owner update MCR",
+            "disable_mssr_update": "Disable owner update MSSR",
+            "disable_new_supply": "Disable new supply",
             "error_invalid": "Quell'asset non può essere usato",
             "error_precision": "Quell'asset non ha la stessa precisione di %(asset)s",
             "error_too_deep": "May not create a bitasset backed by a bitasset backed by a bitasset",
@@ -307,6 +339,7 @@
             "invalid_market_pair": "Preferred market pairing can not be the same market",
             "invalid_permissions_change": "You can't enable a permission for an asset that has a non-zero current supply",
             "issued_assets": "Asset emessi",
+            "lock_max_supply": "Lock max supply",
             "market": "Coppia di mercato preferita",
             "market_fee": "Commissione di mercato",
             "max_market_fee": "Commissione di mercato massima",
@@ -538,6 +571,61 @@
                 "short_custom": "%e %b '%y"
             }
         }
+    },
+    "credit_offer": {
+        "accepted_pawn": "Acceptable",
+        "account": "Account",
+        "active": "Active",
+        "add_pawn": "Add collateral",
+        "add_whitelist": "Add white account",
+        "asset": "Asset",
+        "available_amount": "Available",
+        "borrow": "Loan",
+        "borrow_amount": "Amount",
+        "closed": "Closed",
+        "create": "Create credit offer",
+        "credit_debt_account": "Account",
+        "credit_debts": "Credit Debts",
+        "credit_offers": "Credit Offers",
+        "credit_right_account": "Account",
+        "credit_rights": "Credit Rights",
+        "current_balance": "Available",
+        "debt": "Debt",
+        "edit": "Modify credit offer",
+        "estimated_fee": "Estimated fee",
+        "fee_rate": "Rate",
+        "info_borrow_err": "Can't borrow from oneself ！",
+        "list_repay_period": {
+            "period_-1": "No limit",
+            "period_0": "12 Hours",
+            "period_1": "1 Day",
+            "period_2": "3 Days",
+            "period_3": "7 Days",
+            "period_4": "30 Days",
+            "period_5": "90 days"
+        },
+        "loan_amount": "Maximum",
+        "min_borrow": "Minimum",
+        "mortgage_assets": "Collateral",
+        "my_debt": "My debt",
+        "operate": "Action",
+        "operate_delete": "Delete",
+        "operate_edit": "Modify",
+        "pawn_amount": "Amount",
+        "plh_input_asset_name": "Enter asset",
+        "plh_select_validity_period": "Choose an expiration date",
+        "price": "Price",
+        "redemption_collateral": "Redeem collateral",
+        "repay": "Repay",
+        "repay_period": "Repay period",
+        "status": "Status",
+        "tip_fee_rate": "Expressed as a percentage",
+        "tip_pawn_amount": "The amount of collateral required for each unit of assets lent",
+        "title_add_pawn": "Add collateral",
+        "title_add_whitelist": "Add white account",
+        "total_amount": "Total",
+        "validity_period": "Expiration",
+        "whitelist_account": "Account"
     },
     "customizable_table": {
         "customize_the_columns": "Customize the Columns"
@@ -842,6 +930,7 @@
             },
             "cumulative": "Σ",
             "fee_pool": {
+                "accumulated_collateral_fees": "Accumulated collateral fees",
                 "claim_balance": "Claim fee pool balance",
                 "claim_fees": "Riscuoti commissioni",
                 "claim_pool_text": "The asset owner may withdraw funds from the fee pool using this form:",
@@ -891,9 +980,15 @@
                 "feed_price": "Feed price",
                 "global_settlement_price": "Global settlement Price will be",
                 "global_settlement_trigger": "Global settlement happens at price",
+                "initial_collateral_ratio": "Initial collateral ratio (ICR)",
+                "initial_collateral_ratio2": "Initial collateral ratio (ICR, Set by asset owner)",
                 "maintenance_collateral_ratio": "Rapporto di garanzia di mantenimento (MCR)",
+                "maintenance_collateral_ratio2": "Maintenance collateral ratio (MCR, Set by asset owner)",
+                "margin_call_fee_ratio": "Margin Call Fee Ratio (MCFR)",
                 "maximum_short_squeeze_price": "Maximum short squeeze price (MSSP)",
                 "maximum_short_squeeze_ratio": "Massimo short sqeeze ratio (MSSR)",
+                "maximum_short_squeeze_ratio2": "Maximum short squeeze ratio (MSSR, Set by asset owner)",
+                "median_price_feeds": "Median of price feeds",
                 "min_feeds": "Minimum feeds",
                 "settlement_price": "Force Settlement price",
                 "title": "Price Feed"
@@ -902,6 +997,7 @@
                 "core_exchange_rate": "CER",
                 "empty": "No valid feed producers",
                 "feed_price": "Feed price",
+                "initial_collateral_ratio": "ICR",
                 "maintenance_collateral_ratio": "MCR",
                 "maximum_short_squeeze_ratio": "MSSR",
                 "published": "Pubblicato",
@@ -910,8 +1006,10 @@
                 "title": "Dati del Price Feed"
             },
             "settlement": {
+                "black_swan_response_method": "Global settlement response method (BSRM)",
                 "current_settled": "Already settled supply",
                 "delay": "Delay",
+                "force_settle_fee_percent": "Force settlement fee",
                 "force_settlement": "Force Settlement",
                 "gs_auto_revive_price": "Auto Revive Price (without/with bids)",
                 "gs_collateral_valuation": "Collateral Valuation (with bids)",
@@ -922,6 +1020,8 @@
                 "gs_revert": "Reviving",
                 "gs_revive": "Asset will be revived automatically if auto revive price (bids included) is greater than feed price or all debt is force settled",
                 "gs_see_actions": "see Asset actions",
+                "individual_settlement_debt": "Individual settlement debt",
+                "individual_settlement_fund": "Individual settlement fund",
                 "max_settle_volume": "Max. settlement volume each maintenance period",
                 "offset": "offset included",
                 "price": "Price",
@@ -1150,6 +1250,7 @@
             "bitcny": "bitCNY v 1:1 verso veri Yuan usando un servizio di gateway come Magic Wallet. For more info, vedi https://www.magicw.net/",
             "bridge": "The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by CryptoBridge.",
             "gdex": "L'asset %(asset)s è garantito 1:1 da %(backed)s reali e può essere depositato o ritirato usando il servizio di gateway fornito da GDex.",
+            "ioxbank": "The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by ioxbank.com.",
             "open": "L'asset %(asset)s è garantito 1:1 da %(backed)s reali e può essere depositato o ritirato usando il servizio di gateway fornito da OpenLedger.",
             "rudex": "L'asset %(asset)s è garantito 1:1 da %(backed)s reali e può essere depositato o ritirato usando il servizio di gateway fornito da Rudex.",
             "trade": "L'asset %(asset)s è garantito 1:1 da %(backed)s reali e può essere depositato o ritirato usando il servizio di gateway fornito da Blocktrades.",
@@ -1218,6 +1319,13 @@
         "info": "Info",
         "intermediate": "Account intermedio",
         "inventory": "Inventario",
+        "ioxbank": {
+            "coming_soon": "Coming soon",
+            "min_amount": "Minimum amount: %(minAmount)s %(symbol)s",
+            "min_amount_error": "Please enter number >= minimum",
+            "support_block": "For support, please contact ioxbank at:",
+            "under_construction": "Under Construction"
+        },
         "limit": "Limite: %(amount)s %(symbol)s",
         "limit_withdraw_asset": "Min: %(min)s, Max: %(max)s",
         "limit_withdraw_asset_max": "Maximum withdraw: %(min)s %(coin)s",
@@ -1237,6 +1345,7 @@
         "purchase_1": "Acquista %(outputAsset)s rapidamente e facilmente usando %(inputAsset)s da un portafoglio esterno. Questo servizio è fornito da <a href='https://blocktrades.us/' target='blank' rel='noopener noreferrer'>Blocktrades</a>",
         "purchase_notice": "%(inputAsset)s sent to this address will show up as %(outputAsset)s",
         "purchase_notice_memo": "Memo <b>required</b> for proper routing to your account",
+        "purchase_notice_tag": "Tag <b>required</b> for proper routing to your account",
         "receive_account": "Account ricevente:",
         "recent_deposit": "Depositi recenti",
         "recent_withdraw": "Prelievi recenti",
@@ -1326,8 +1435,10 @@
         "lock_short": "Log out",
         "locked_tip": "<br/>Clicca per fare il login e sbloccare il tuo portafoglio.<br/><br/>Chiudere la finestra del browser effettuerà automaticamente il log out.",
         "logout": "Logout",
+        "p2p_lending": "Credit Offer",
         "payments": "Invia",
         "payments_legacy": "Send (legacy)",
+        "poolmart": "Liquidity Pools",
         "settings": "Impostazioni",
         "showcases": "Spotlight",
         "title": "BitShares UI",
@@ -1427,6 +1538,9 @@
             "add_contact": "Add contact to the list",
             "show_asset": "Show asset",
             "show_market": "Show market"
+        },
+        "poolmart": {
+            "title": "Liquidity Pools"
         },
         "power": "Login",
         "question_circle": "Help",
@@ -1685,6 +1799,7 @@
             "public_key": "Public key",
             "quantity": "Quantity",
             "submit": "Preleva",
+            "tag": "tag",
             "withdraw": "Withdraw"
         },
         "witness": {
@@ -1791,6 +1906,11 @@
         "proposal_update": "{account} ha aggiornato una proposta di transazione",
         "publish_feed": "{account} ha pubblicato un feed price di {price}",
         "reg_account": "{registrar} ha registrato l'account {new_account}",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan {id}",
+        "samet_fund_create": "{account} created flash loan of {amount} with fee rate {fee}",
+        "samet_fund_delete": "{account} delete flash loan {id} with get back {amount}",
+        "samet_fund_repay": "{account} repays flash loan {id} {amount} with fee {fee}",
+        "samet_fund_update": "{account} update flash loan {id}",
         "set_proxy": "{account} ha scelto {proxy} come suo proxy di voto",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -1827,6 +1947,29 @@
     "pagination": {
         "newer": "Più recenti",
         "older": "Più vecchi"
+    },
+    "poolmart": {
+        "liquidity_pools": {
+            "amount_to_sell": "Amount to sell",
+            "asset_a": "Asset A",
+            "asset_a_qty": "Asset A QTY",
+            "asset_b": "Asset B",
+            "asset_b_qty": "Asset B QTY",
+            "confirm_delete_pool": "Are you sure you want to delete the pool?",
+            "delete_pool": "Delete",
+            "exchange": "Exchange",
+            "min_to_receive": "Min to receive",
+            "need_stake_first": "Need Stake The Pool First!",
+            "pool_id": "Pool Id",
+            "share_asset": "Share Asset",
+            "stake": "Stake",
+            "stake_unstake": "Stake/Unstake",
+            "taker_fee_percent": "Taker Fee",
+            "taker_fee_percent_rate": "Taker Fee Rate",
+            "title": "Pools",
+            "unstake": "Unstake",
+            "withdrawal_fee_percent": "Withdrawal Fee"
+        }
     },
     "prediction": {
         "add_opinion_modal": {
@@ -2542,6 +2685,7 @@
         "sent": "inviato",
         "settlement_date": "Data settlement",
         "show_more": "Show more",
+        "title_qrcode": "Transaction QR Code",
         "to": "a",
         "transaction_confirmed": "Transazione confermata",
         "trxTypes": {
@@ -2601,6 +2745,11 @@
             "proposal_create": "Crea proposta",
             "proposal_delete": "Cancella proposta",
             "proposal_update": "Aggiorna proposta",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_repay": "Repay flash loan",
+            "samet_fund_update": "Update flash loan",
             "ticket_create": "Create ticket",
             "transfer": "Trasferimento",
             "transfer_from_blind": "Trasferisci da blinded account",
@@ -2618,6 +2767,8 @@
         },
         "vesting_balance_create": "ha creato un saldo vesting di",
         "view_json": "Show raw json",
+        "view_qr": "Show QR",
+        "view_qrcode": "Show Trx QR code",
         "waiting": "In attesa di conferma..",
         "whitelist_states": {
             "black_listed": "In blacklist",
