--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -22,6 +22,7 @@
         "contacts": "Контакты",
         "create_account": "Создать аккаунт",
         "create_new": "Создать новый аккаунт",
+        "credit_offer": "Credit Management",
         "deactivate_suspicious_proposals": "Деактивировать утверждение подозрительных предложений",
         "deposit": "Внести депозит в BTS",
         "deposit_address": "Ваш адрес депозита – это имя вашего аккаунта",
@@ -70,6 +71,30 @@
         "intro_text_3": "Также <b>DEX</b> дает возможность создавать выпускаемые пользователем активы (user-issued assets – UIA), которые могут торговаться против любого другого не требующего доверия/выпущенного пользователем актива на платформе. Самым известным эмитентом на платформе является <b>OpenLedger</b>, поддерживающий такие активы, как BTC, ETH, DASH, STEEM, LTC, DOGE и многие другие",
         "intro_text_4": "Это уникальный микс традиционной и децентрализованной торговли, и всё это в столь знакомом для криптовалютных трейдеров интерфейсе биржи. Удачной торговли!",
         "intro_text_title": "Добро пожаловать в %(wallet_name)s",
+        "liquidity_pools": {
+            "alert_asset_a": "ID of ASSET A should be greater than ID of ASSET B",
+            "alert_asset_b": "ID of ASSET B should be smaller than ID of ASSET A",
+            "alert_request_input_asset_a": "Please select ASSET A",
+            "alert_request_input_asset_b": "Please select ASSET B",
+            "alert_request_input_pool": "Please select pool",
+            "alert_request_input_taker_fee": "Please input taker fee",
+            "alert_request_input_unstack_fee": "Please input unstacke fee",
+            "alert_taker_fee": "",
+            "alert_unstack_fee": "",
+            "asset_a": "Asset A",
+            "asset_a_balance": "Asset A Balance",
+            "asset_b": "Asset B",
+            "asset_b_balance": "Asset B Balance",
+            "create_pool": "Create Pool",
+            "delete": "Delete",
+            "liquidity_pools": "Liquidity Pools",
+            "pool_balance": "Pool Balance",
+            "pool_name": "Pool Name",
+            "stake_status": "Stake/Unstake",
+            "taker_fee": "Taker Fee",
+            "title": "Pools",
+            "unstake_fee": "Unstake Fee"
+        },
         "login_with": "Войти при помощи",
         "market_actions": "Рыночные операции",
         "market_orders": "Рыночные ордера",
@@ -138,6 +163,7 @@
         "no_order_history": "История ордеров отсутствует",
         "no_orders": "Нет открытых ордеров",
         "no_price": "--",
+        "no_trades": "No last trades",
         "open_orders": "Открытые ордера",
         "optional": {
             "formatter": "При необходимости {restore_link} или создайте аккаунт с помощью {restore_form}.",
@@ -287,8 +313,14 @@
             "decimals": "Количество знаков после запятой",
             "description": "Описание",
             "details": "Подробности",
+            "disable_bsrm_update": "Disable owner update BSRM",
+            "disable_collateral_bidding": "Disable collateral bidding",
             "disable_confidential": "Отключить конфиденциальные транзакции",
             "disable_force_settle": "Отключить принудительное погашение",
+            "disable_icr_update": "Disable owner update ICR",
+            "disable_mcr_update": "Disable owner update MCR",
+            "disable_mssr_update": "Disable owner update MSSR",
+            "disable_new_supply": "Disable new supply",
             "error_invalid": "Этот актив не может быть использован",
             "error_precision": "Этот актив не обладает той же точностью, что и %(asset)s",
             "error_too_deep": "Невозможно создать битактив (BitAsset), обеспеченный залогом в битактиве, который также обеспечен битактивом",
@@ -307,6 +339,7 @@
             "invalid_market_pair": "Предпочтительная рыночная пара не может быть с того же рынка",
             "invalid_permissions_change": "Вы не можете активировать права доступа для актива, текущее предложение которого не равно нулю",
             "issued_assets": "Выпущенные активы",
+            "lock_max_supply": "Lock max supply",
             "market": "Предпочтительная рыночная пара",
             "market_fee": "Рыночная комиссия",
             "max_market_fee": "Максимальная рыночная комиссия",
@@ -538,6 +571,61 @@
                 "short_custom": "%e %b '%y"
             }
         }
+    },
+    "credit_offer": {
+        "accepted_pawn": "Acceptable",
+        "account": "Account",
+        "active": "Active",
+        "add_pawn": "Add collateral",
+        "add_whitelist": "Add white account",
+        "asset": "Asset",
+        "available_amount": "Available",
+        "borrow": "Loan",
+        "borrow_amount": "Amount",
+        "closed": "Closed",
+        "create": "Create credit offer",
+        "credit_debt_account": "Account",
+        "credit_debts": "Credit Debts",
+        "credit_offers": "Credit Offers",
+        "credit_right_account": "Account",
+        "credit_rights": "Credit Rights",
+        "current_balance": "Available",
+        "debt": "Debt",
+        "edit": "Modify credit offer",
+        "estimated_fee": "Estimated fee",
+        "fee_rate": "Rate",
+        "info_borrow_err": "Can't borrow from oneself ！",
+        "list_repay_period": {
+            "period_-1": "No limit",
+            "period_0": "12 Hours",
+            "period_1": "1 Day",
+            "period_2": "3 Days",
+            "period_3": "7 Days",
+            "period_4": "30 Days",
+            "period_5": "90 days"
+        },
+        "loan_amount": "Maximum",
+        "min_borrow": "Minimum",
+        "mortgage_assets": "Collateral",
+        "my_debt": "My debt",
+        "operate": "Action",
+        "operate_delete": "Delete",
+        "operate_edit": "Modify",
+        "pawn_amount": "Amount",
+        "plh_input_asset_name": "Enter asset",
+        "plh_select_validity_period": "Choose an expiration date",
+        "price": "Price",
+        "redemption_collateral": "Redeem collateral",
+        "repay": "Repay",
+        "repay_period": "Repay period",
+        "status": "Status",
+        "tip_fee_rate": "Expressed as a percentage",
+        "tip_pawn_amount": "The amount of collateral required for each unit of assets lent",
+        "title_add_pawn": "Add collateral",
+        "title_add_whitelist": "Add white account",
+        "total_amount": "Total",
+        "validity_period": "Expiration",
+        "whitelist_account": "Account"
     },
     "customizable_table": {
         "customize_the_columns": "Кастомизировать столбцы"
@@ -848,6 +936,7 @@
             },
             "cumulative": "Σ",
             "fee_pool": {
+                "accumulated_collateral_fees": "Accumulated collateral fees",
                 "claim_balance": "Востребовать остаток пула комиссий",
                 "claim_fees": "Востребовать комиссии",
                 "claim_pool_text": "Владелец актива может выводить средства из пула комиссий, используя эту форму:",
@@ -897,9 +986,15 @@
                 "feed_price": "Цена котировок",
                 "global_settlement_price": "Цена глобального погашения составит ",
                 "global_settlement_trigger": "Глобальное погашение запускается при цене",
+                "initial_collateral_ratio": "Initial collateral ratio (ICR)",
+                "initial_collateral_ratio2": "Initial collateral ratio (ICR, Set by asset owner)",
                 "maintenance_collateral_ratio": "Поддерживающий коэффициент обеспечения (MCR)",
+                "maintenance_collateral_ratio2": "Maintenance collateral ratio (MCR, Set by asset owner)",
+                "margin_call_fee_ratio": "Margin Call Fee Ratio (MCFR)",
                 "maximum_short_squeeze_price": "Максимальная цена короткого сжатия (MSSP)",
                 "maximum_short_squeeze_ratio": "Максимальный коэффициент короткого сжатия (MSSR)",
+                "maximum_short_squeeze_ratio2": "Maximum short squeeze ratio (MSSR, Set by asset owner)",
+                "median_price_feeds": "Median of price feeds",
                 "min_feeds": "Минимум котировок",
                 "settlement_price": "Цена принудительного погашения",
                 "title": "Котировки"
@@ -908,6 +1003,7 @@
                 "core_exchange_rate": "CER (основной обменный курс)",
                 "empty": "Нет подходящих производителей котировок",
                 "feed_price": "Цена котировок",
+                "initial_collateral_ratio": "ICR",
                 "maintenance_collateral_ratio": "MCR (поддерживающий коэффициент обеспечения)",
                 "maximum_short_squeeze_ratio": "MSSR (максимальный коэффициент короткого сжатия)",
                 "published": "Опубликованы",
@@ -916,8 +1012,10 @@
                 "title": "Данные котировок"
             },
             "settlement": {
+                "black_swan_response_method": "Global settlement response method (BSRM)",
                 "current_settled": "Предложение уже погашено",
                 "delay": "Задержка",
+                "force_settle_fee_percent": "Force settlement fee",
                 "force_settlement": "Принудительное погашение",
                 "gs_auto_revive_price": "Автоматическое восстановление цены (с/без предложений)",
                 "gs_collateral_valuation": "Оценка залогового обеспечения (с предложениями)",
@@ -928,6 +1026,8 @@
                 "gs_revert": "Восстановление",
                 "gs_revive": "Актив будет восстановлен автоматически, когда цена котировок превысит цену автовосстановления (включая заявки) или же долг будет принудительно погашен. ",
                 "gs_see_actions": "показать действия с активом",
+                "individual_settlement_debt": "Individual settlement debt",
+                "individual_settlement_fund": "Individual settlement fund",
                 "max_settle_volume": "Максимальный объем погашения на каждый период обслуживания",
                 "offset": "включая смещение",
                 "price": "Цена",
@@ -1156,6 +1256,7 @@
             "bitcny": "bitCNY может быть депонирован или выведен в соотношении 1:1 к реальному юаню с помощью сервиса шлюза от Magic Wallet. Подробную информацию можно найти здесь https://www.magicw.net/",
             "bridge": " Актив %(asset)s обеспечен в соотношении 1:1 реальными %(backed)s и может быть размещен в депозите или выведен через шлюз, предоставляемый CryptoBridge.",
             "gdex": " Актив %(asset)s обеспечен в соотношении 1:1 реальными %(backed)s и может быть размещен в депозите или выведен через шлюз, предоставляемый GDex.",
+            "ioxbank": "The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by ioxbank.com.",
             "open": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от OpenLedger.",
             "rudex": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от Rudex.",
             "trade": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от Blocktrades.",
@@ -1224,6 +1325,13 @@
         "info": "Информация",
         "intermediate": "Промежуточный аккаунт",
         "inventory": "Инвентарь",
+        "ioxbank": {
+            "coming_soon": "Coming soon",
+            "min_amount": "Minimum amount: %(minAmount)s %(symbol)s",
+            "min_amount_error": "Please enter number >= minimum",
+            "support_block": "For support, please contact ioxbank at:",
+            "under_construction": "Under Construction"
+        },
         "limit": "Лимит: %(amount)s %(symbol)s",
         "limit_withdraw_asset": "Минимум: %(min)s Максимум: %(max)s",
         "limit_withdraw_asset_max": "Максимальная сумма вывода: %(min)s %(coin)s",
@@ -1243,6 +1351,7 @@
         "purchase_1": "Покупайте %(outputAsset)s легко и просто, используя %(inputAsset)s с внешнего кошелька. Этот сервис предоставляется <a href='https://blocktrades.us/' target='blank' rel='noopener noreferrer'><a href='https://blocktrades.us/' target='blank' rel='noopener noreferrer'>Blocktrades</a>",
         "purchase_notice": "%(inputAsset)s, отправленные на этот адрес, будут отображаться как %(outputAsset)s",
         "purchase_notice_memo": "Для правильной маршрутизации к вашему аккаунту <b>требуется</b> мемо",
+        "purchase_notice_tag": "Tag <b>required</b> for proper routing to your account",
         "receive_account": "Аккаунт получателя:",
         "recent_deposit": "Недавние депозиты",
         "recent_withdraw": "Недавние выводы",
@@ -1332,8 +1441,10 @@
         "lock_short": "Выйти",
         "locked_tip": "<br/>Нажмите, чтобы войти.<br/><br/>Закрыв окно браузера, вы также выйдете из аккаунта.",
         "logout": "Выйти",
+        "p2p_lending": "Credit Offer",
         "payments": "Отправить",
         "payments_legacy": "или отправить старым способом",
+        "poolmart": "Liquidity Pools",
         "settings": "Настройки",
         "showcases": "Вашему вниманию",
         "title": "Пользовательский интерфейс %(wallet_name)s",
@@ -1433,6 +1544,9 @@
             "add_contact": "Добавить контакт в список",
             "show_asset": "Показать актив",
             "show_market": "Показать рынок"
+        },
+        "poolmart": {
+            "title": "Liquidity Pools"
         },
         "power": "Войти",
         "question_circle": "Помощь",
@@ -1691,6 +1805,7 @@
             "public_key": "Public key",
             "quantity": "Количество",
             "submit": "Вывести",
+            "tag": "tag",
             "withdraw": "Вывод"
         },
         "witness": {
@@ -1797,6 +1912,11 @@
         "proposal_update": "{account} обновил предложение",
         "publish_feed": "{account} опубликовал котировки {price}",
         "reg_account": "{registrar} зарегистрировал аккаунт {new_account}",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan {id}",
+        "samet_fund_create": "{account} created flash loan of {amount} with fee rate {fee}",
+        "samet_fund_delete": "{account} delete flash loan {id} with get back {amount}",
+        "samet_fund_repay": "{account} repays flash loan {id} {amount} with fee {fee}",
+        "samet_fund_update": "{account} update flash loan {id}",
         "set_proxy": "{account} установил {proxy} в качестве своего прокси для голосования",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -1833,6 +1953,29 @@
     "pagination": {
         "newer": "Новые",
         "older": "Предыдущие"
+    },
+    "poolmart": {
+        "liquidity_pools": {
+            "amount_to_sell": "Amount to sell",
+            "asset_a": "Asset A",
+            "asset_a_qty": "Asset A QTY",
+            "asset_b": "Asset B",
+            "asset_b_qty": "Asset B QTY",
+            "confirm_delete_pool": "Are you sure you want to delete the pool?",
+            "delete_pool": "Delete",
+            "exchange": "Exchange",
+            "min_to_receive": "Min to receive",
+            "need_stake_first": "Need Stake The Pool First!",
+            "pool_id": "Pool Id",
+            "share_asset": "Share Asset",
+            "stake": "Stake",
+            "stake_unstake": "Stake/Unstake",
+            "taker_fee_percent": "Taker Fee",
+            "taker_fee_percent_rate": "Taker Fee Rate",
+            "title": "Pools",
+            "unstake": "Unstake",
+            "withdrawal_fee_percent": "Withdrawal Fee"
+        }
     },
     "prediction": {
         "add_opinion_modal": {
@@ -2548,6 +2691,7 @@
         "sent": "отправлена",
         "settlement_date": "Дата погашения",
         "show_more": "Показать больше",
+        "title_qrcode": "Transaction QR Code",
         "to": "кому",
         "transaction_confirmed": "Транзакция подтверждена",
         "trxTypes": {
@@ -2607,6 +2751,11 @@
             "proposal_create": "Создание предложения",
             "proposal_delete": "Удаление предложения",
             "proposal_update": "Обновление предложения",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_repay": "Repay flash loan",
+            "samet_fund_update": "Update flash loan",
             "ticket_create": "Create ticket",
             "transfer": "Перевод",
             "transfer_from_blind": "Перевод со слепого аккаунта",
@@ -2624,6 +2773,8 @@
         },
         "vesting_balance_create": "создал вестинговый баланс",
         "view_json": "Показать необработанный json",
+        "view_qr": "Show QR",
+        "view_qrcode": "Show Trx QR code",
         "waiting": "Ожидание подтверждения...",
         "whitelist_states": {
             "black_listed": "В чёрном списке",
