--- a/app/assets/locales/locale-tr.json
+++ b/app/assets/locales/locale-tr.json
@@ -22,6 +22,7 @@
         "contacts": "Kontaklar",
         "create_account": "Hesap oluştur",
         "create_new": "Yeni Hesap Oluştur",
+        "credit_offer": "Credit Management",
         "deactivate_suspicious_proposals": "Şüpheli teklifleri devre dışı bırak",
         "deposit": "BTS'e para yatırın",
         "deposit_address": "Para yatırma adresiniz hesap adınızdır",
@@ -70,6 +71,30 @@
         "intro_text_3": "Platform üzerinde kullanıcılar kendi hesaplarının tam kontrolüne sahiptir - hiçbir aracı kurum işlemlerinize müdahale edemez!",
         "intro_text_4": "Platformda BTC, ETH, STEEM, DASH, LTC, DOGE gibi coin'lerle işlem yapabileceğiniz gibi aynı zamanda kendi coin'inizi oluşturabilir ve hemen ticaretine başlayabilirsiniz.",
         "intro_text_title": "Bitshares'e Hoş Geldiniz",
+        "liquidity_pools": {
+            "alert_asset_a": "ID of ASSET A should be greater than ID of ASSET B",
+            "alert_asset_b": "ID of ASSET B should be smaller than ID of ASSET A",
+            "alert_request_input_asset_a": "Please select ASSET A",
+            "alert_request_input_asset_b": "Please select ASSET B",
+            "alert_request_input_pool": "Please select pool",
+            "alert_request_input_taker_fee": "Please input taker fee",
+            "alert_request_input_unstack_fee": "Please input unstacke fee",
+            "alert_taker_fee": "",
+            "alert_unstack_fee": "",
+            "asset_a": "Asset A",
+            "asset_a_balance": "Asset A Balance",
+            "asset_b": "Asset B",
+            "asset_b_balance": "Asset B Balance",
+            "create_pool": "Create Pool",
+            "delete": "Delete",
+            "liquidity_pools": "Liquidity Pools",
+            "pool_balance": "Pool Balance",
+            "pool_name": "Pool Name",
+            "stake_status": "Stake/Unstake",
+            "taker_fee": "Taker Fee",
+            "title": "Pools",
+            "unstake_fee": "Unstake Fee"
+        },
         "login_with": "İle giriş",
         "market_actions": "Takas işlemleri",
         "market_orders": "Piyasa emirleri",
@@ -138,6 +163,7 @@
         "no_order_history": "Sipariş geçmişi yok",
         "no_orders": "Açık emir yok",
         "no_price": "Fiyat mevcut değil",
+        "no_trades": "No last trades",
         "open_orders": "Açık Emirler",
         "optional": {
             "formatter": "Optionally, {restore_link} or create an account using the {restore_form}.",
@@ -287,8 +313,14 @@
             "decimals": "Ondalık hane sayısı",
             "description": "Tanım",
             "details": "Detaylar",
+            "disable_bsrm_update": "Disable owner update BSRM",
+            "disable_collateral_bidding": "Disable collateral bidding",
             "disable_confidential": "Gizli işlemler etkisiz",
             "disable_force_settle": "Zorla kapamayı etkisizleştir",
+            "disable_icr_update": "Disable owner update ICR",
+            "disable_mcr_update": "Disable owner update MCR",
+            "disable_mssr_update": "Disable owner update MSSR",
+            "disable_new_supply": "Disable new supply",
             "error_invalid": "Bu dijital varlık kullanılmayabilir",
             "error_precision": "Dijital varlık, %(asset)s ile aynı hassasiyete sahip değil",
             "error_too_deep": "Bir bit varlığı tarafından desteklenen bir bit varlığı tarafından desteklenen bir bit varlığı oluşturamaz",
@@ -307,6 +339,7 @@
             "invalid_market_pair": "Tercih edilen pazar eşleştirmesi aynı pazar olamaz",
             "invalid_permissions_change": "Mevcut arzı sıfır olmayan bir varlık için izin etkinleştiremezsiniz",
             "issued_assets": "Piyasa Sürülmüş Aktifler",
+            "lock_max_supply": "Lock max supply",
             "market": "Tercih edilen piyasa çifti",
             "market_fee": "Piyasa ücreti",
             "max_market_fee": "Azami piyasa ücreti",
@@ -538,6 +571,61 @@
                 "short_custom": "%e %b '%y"
             }
         }
+    },
+    "credit_offer": {
+        "accepted_pawn": "Acceptable",
+        "account": "Account",
+        "active": "Active",
+        "add_pawn": "Add collateral",
+        "add_whitelist": "Add white account",
+        "asset": "Asset",
+        "available_amount": "Available",
+        "borrow": "Loan",
+        "borrow_amount": "Amount",
+        "closed": "Closed",
+        "create": "Create credit offer",
+        "credit_debt_account": "Account",
+        "credit_debts": "Credit Debts",
+        "credit_offers": "Credit Offers",
+        "credit_right_account": "Account",
+        "credit_rights": "Credit Rights",
+        "current_balance": "Available",
+        "debt": "Debt",
+        "edit": "Modify credit offer",
+        "estimated_fee": "Estimated fee",
+        "fee_rate": "Rate",
+        "info_borrow_err": "Can't borrow from oneself ！",
+        "list_repay_period": {
+            "period_-1": "No limit",
+            "period_0": "12 Hours",
+            "period_1": "1 Day",
+            "period_2": "3 Days",
+            "period_3": "7 Days",
+            "period_4": "30 Days",
+            "period_5": "90 days"
+        },
+        "loan_amount": "Maximum",
+        "min_borrow": "Minimum",
+        "mortgage_assets": "Collateral",
+        "my_debt": "My debt",
+        "operate": "Action",
+        "operate_delete": "Delete",
+        "operate_edit": "Modify",
+        "pawn_amount": "Amount",
+        "plh_input_asset_name": "Enter asset",
+        "plh_select_validity_period": "Choose an expiration date",
+        "price": "Price",
+        "redemption_collateral": "Redeem collateral",
+        "repay": "Repay",
+        "repay_period": "Repay period",
+        "status": "Status",
+        "tip_fee_rate": "Expressed as a percentage",
+        "tip_pawn_amount": "The amount of collateral required for each unit of assets lent",
+        "title_add_pawn": "Add collateral",
+        "title_add_whitelist": "Add white account",
+        "total_amount": "Total",
+        "validity_period": "Expiration",
+        "whitelist_account": "Account"
     },
     "customizable_table": {
         "customize_the_columns": "Sütunları Özelleştirin"
@@ -842,6 +930,7 @@
             },
             "cumulative": "Σ",
             "fee_pool": {
+                "accumulated_collateral_fees": "Accumulated collateral fees",
                 "claim_balance": "Talep ücreti havuz bakiyesi",
                 "claim_fees": "Ücretleri talep et",
                 "claim_pool_text": "Varlık sahibi, bu formu kullanarak ücret havuzundan para çekebilir:",
@@ -891,9 +980,15 @@
                 "feed_price": "Yem fiyatı",
                 "global_settlement_price": "Küresel yerleşim Fiyatı",
                 "global_settlement_trigger": "Küresel uzlaşma fiyata olur",
+                "initial_collateral_ratio": "Initial collateral ratio (ICR)",
+                "initial_collateral_ratio2": "Initial collateral ratio (ICR, Set by asset owner)",
                 "maintenance_collateral_ratio": "Sürdürme Teminat Oranı (MCR)",
+                "maintenance_collateral_ratio2": "Maintenance collateral ratio (MCR, Set by asset owner)",
+                "margin_call_fee_ratio": "Margin Call Fee Ratio (MCFR)",
                 "maximum_short_squeeze_price": "Maksimum kısa sıkıştırma fiyatı (MSSP)",
                 "maximum_short_squeeze_ratio": "Maksimum kısa konum oranı (MSSR)",
+                "maximum_short_squeeze_ratio2": "Maximum short squeeze ratio (MSSR, Set by asset owner)",
+                "median_price_feeds": "Median of price feeds",
                 "min_feeds": "Minimum feeds",
                 "settlement_price": "Zorla Uzlaştırma fiyatı",
                 "title": "Fiyat Yayını"
@@ -902,6 +997,7 @@
                 "core_exchange_rate": "CER",
                 "empty": "Geçerli yem üreticisi yok",
                 "feed_price": "Yem fiyatı",
+                "initial_collateral_ratio": "ICR",
                 "maintenance_collateral_ratio": "MCR",
                 "maximum_short_squeeze_ratio": "MSSR",
                 "published": "Yayınlanan",
@@ -910,8 +1006,10 @@
                 "title": "Fiyat Yayın Verileri"
             },
             "settlement": {
+                "black_swan_response_method": "Global settlement response method (BSRM)",
                 "current_settled": "Uzlaşma Fiyatını Zorla",
                 "delay": "Gecikme",
+                "force_settle_fee_percent": "Force settlement fee",
                 "force_settlement": "Zorla Yerleştirme",
                 "gs_auto_revive_price": "Otomatik Canlandırma Fiyatı (teklifsiz/teklifli)",
                 "gs_collateral_valuation": "Teminat Değerlemesi (tekliflerle birlikte)",
@@ -922,6 +1020,8 @@
                 "gs_revert": "Canlandırmak",
                 "gs_revive": "Otomatik canlandırma fiyatı (teklifler dahil) besleme fiyatından büyükse veya tüm borçlar zorunlu olarak kapatılırsa, varlık otomatik olarak canlandırılacaktır.",
                 "gs_see_actions": "bkz. Varlık işlemleri",
+                "individual_settlement_debt": "Individual settlement debt",
+                "individual_settlement_fund": "Individual settlement fund",
                 "max_settle_volume": "Maks. her bakım periyodunda yerleşim hacmi",
                 "offset": "ofset dahil",
                 "price": "Fiyat",
@@ -1150,6 +1250,7 @@
             "bitcny": "bitCNY, Çin Yuanı'nın Bitshares borsasındaki temsilidir. 1:1 Çin Yuanı ile değiştirilebilen bu dijital varlık Magic Wallet tarafından yürütülmektedir. Daha fazla bilgi için: https://www.magicw.net/",
             "bridge": "Bu dijital varlık Bitshares üzerinde %(backed)s işlemleri yapmanız için CryptoBridge tarafından %%100 %(backed)s rezervi ile desteklenmektedir. İstediğiniz zaman 1:1 oranında %(asset)s-%(backed)s dönüşümü yapabilirsiniz.",
             "gdex": "Bu dijital varlık Bitshares üzerinde %(backed)s işlemleri yapmanız için Gdex tarafından %%100 %(backed)s rezervi ile desteklenmektedir. İstediğiniz zaman 1:1 oranında %(asset)s-%(backed)s dönüşümü yapabilirsiniz.",
+            "ioxbank": "The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by ioxbank.com.",
             "open": "Bu dijital varlık Bitshares üzerinde %(backed)s işlemleri yapmanız için OpenLedger tarafından %%100 %(backed)s rezervi ile desteklenmektedir. İstediğiniz zaman 1:1 oranında %(asset)s-%(backed)s dönüşümü yapabilirsiniz.",
             "rudex": "Bu dijital varlık Bitshares üzerinde %(backed)s işlemleri yapmanız için Rudex tarafından %%100 %(backed)s rezervi ile desteklenmektedir. İstediğiniz zaman 1:1 oranında %(asset)s-%(backed)s dönüşümü yapabilirsiniz.",
             "trade": "Bu dijital varlık Bitshares üzerinde %(backed)s işlemleri yapmanız için BlockTrades tarafından %%100 %(backed)s rezervi ile desteklenmektedir. İstediğiniz zaman 1:1 oranında %(asset)s-%(backed)s dönüşümü yapabilirsiniz.",
@@ -1218,6 +1319,13 @@
         "info": "Info",
         "intermediate": "Aracı hesap",
         "inventory": "Envanter",
+        "ioxbank": {
+            "coming_soon": "Coming soon",
+            "min_amount": "Minimum amount: %(minAmount)s %(symbol)s",
+            "min_amount_error": "Please enter number >= minimum",
+            "support_block": "For support, please contact ioxbank at:",
+            "under_construction": "Under Construction"
+        },
         "limit": "Sınır: %(amount)s %(symbol)s",
         "limit_withdraw_asset": "Min: %(min)s, Max: %(max)s",
         "limit_withdraw_asset_max": "Maximum withdraw: %(min)s %(coin)s",
@@ -1237,6 +1345,7 @@
         "purchase_1": "%(inputAsset)s kullanarak hızlı ve kolayca %(outputAsset)s satın almak için burayı kullanabilirsiniz. Bu hizmet <a href='https://blocktrades.us/' target='blank' rel='noopener noreferrer'>Blocktrades</a> tarafından sağlanmaktadır.",
         "purchase_notice": "%(inputAsset)s sent to this address will show up as %(outputAsset)s",
         "purchase_notice_memo": "Memo <b>required</b> for proper routing to your account",
+        "purchase_notice_tag": "Tag <b>required</b> for proper routing to your account",
         "receive_account": "Alacak hesap:",
         "recent_deposit": "Son işlemler",
         "recent_withdraw": "Son işlemler",
@@ -1326,8 +1435,10 @@
         "lock_short": "Log out",
         "locked_tip": "Cüzdan kilitli.<br/>Açmak için tıkla.",
         "logout": "Çıkış",
+        "p2p_lending": "Credit Offer",
         "payments": "Gönder",
         "payments_legacy": "Send (legacy)",
+        "poolmart": "Liquidity Pools",
         "settings": "Ayarlar",
         "showcases": "Spotlight",
         "title": "BitKapital",
@@ -1427,6 +1538,9 @@
             "add_contact": "Listeye kişi ekle",
             "show_asset": "Öğeyi göster",
             "show_market": "Pazarı göster"
+        },
+        "poolmart": {
+            "title": "Liquidity Pools"
         },
         "power": "Giriş yap",
         "question_circle": "Yardım",
@@ -1685,6 +1799,7 @@
             "public_key": "Genel anahtar",
             "quantity": "Miktar",
             "submit": "Çek",
+            "tag": "tag",
             "withdraw": "Withdraw"
         },
         "witness": {
@@ -1791,6 +1906,11 @@
         "proposal_update": "{account} bir teklif işlemi güncelledi",
         "publish_feed": "{account} fiyat duyurdu: {price}",
         "reg_account": "{registrar} kayıt yaptırdı - Hesap adı: {new_account}",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan {id}",
+        "samet_fund_create": "{account} created flash loan of {amount} with fee rate {fee}",
+        "samet_fund_delete": "{account} delete flash loan {id} with get back {amount}",
+        "samet_fund_repay": "{account} repays flash loan {id} {amount} with fee {fee}",
+        "samet_fund_update": "{account} update flash loan {id}",
         "set_proxy": "{account} oy kullanması için {proxy} adlı hesabı vekil tayin etti",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -1827,6 +1947,29 @@
     "pagination": {
         "newer": "Daha yeni",
         "older": "Daha eski"
+    },
+    "poolmart": {
+        "liquidity_pools": {
+            "amount_to_sell": "Amount to sell",
+            "asset_a": "Asset A",
+            "asset_a_qty": "Asset A QTY",
+            "asset_b": "Asset B",
+            "asset_b_qty": "Asset B QTY",
+            "confirm_delete_pool": "Are you sure you want to delete the pool?",
+            "delete_pool": "Delete",
+            "exchange": "Exchange",
+            "min_to_receive": "Min to receive",
+            "need_stake_first": "Need Stake The Pool First!",
+            "pool_id": "Pool Id",
+            "share_asset": "Share Asset",
+            "stake": "Stake",
+            "stake_unstake": "Stake/Unstake",
+            "taker_fee_percent": "Taker Fee",
+            "taker_fee_percent_rate": "Taker Fee Rate",
+            "title": "Pools",
+            "unstake": "Unstake",
+            "withdrawal_fee_percent": "Withdrawal Fee"
+        }
     },
     "prediction": {
         "add_opinion_modal": {
@@ -2542,6 +2685,7 @@
         "sent": "gönderdi, miktar: ",
         "settlement_date": "Uzlaşma tarihi",
         "show_more": "Daha fazla göster",
+        "title_qrcode": "Transaction QR Code",
         "to": "alan: ",
         "transaction_confirmed": "İşlem teyit edildi",
         "trxTypes": {
@@ -2601,6 +2745,11 @@
             "proposal_create": "Teklif oluşturma",
             "proposal_delete": "Teklif silme",
             "proposal_update": "Teklif güncelleme",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_repay": "Repay flash loan",
+            "samet_fund_update": "Update flash loan",
             "ticket_create": "Bilet oluştur",
             "transfer": "Gönder",
             "transfer_from_blind": "Kör hesaptan transfer et",
@@ -2618,6 +2767,8 @@
         },
         "vesting_balance_create": "Bekletilen bakiyesi oluşturulan hesap:",
         "view_json": "ham json'u göster",
+        "view_qr": "Show QR",
+        "view_qrcode": "Show Trx QR code",
         "waiting": "Onay bekleniyor...",
         "whitelist_states": {
             "black_listed": "Kara listeye alınmış",
