--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -22,6 +22,7 @@
         "contacts": "联系人",
         "create_account": "创建账户",
         "create_new": "创建新账户",
+        "credit_offer": "借贷管理",
         "deactivate_suspicious_proposals": "对可疑钓鱼提案隐藏 批准按钮 ！ 警告：批准钓鱼提案可能会丢失资金及账户权限！！！",
         "deposit": "充入BTS",
         "deposit_address": "您的账户名就是您的充值地址",
@@ -70,6 +71,30 @@
         "intro_text_3": "<b>DEX</b>允许用户创建发行资产（UIAs），其能与其它UIAs或者去信任资产在本平台上交易。DEX上一位著名的发行商就是<b>OpenLedger</b>，其提供了大量资产如BTC, ETH, STEEM, DASH, LTC, DOGE等等。",
         "intro_text_4": "DEX提供给虚拟资产交易者一种传统与去中心化相结合的独特体验，交易界面易于上手。祝交易愉快！",
         "intro_text_title": "欢迎来到%(wallet_name)s",
+        "liquidity_pools": {
+            "alert_asset_a": "ID of ASSET A should be greater than ID of ASSET B",
+            "alert_asset_b": "ID of ASSET B should be smaller than ID of ASSET A",
+            "alert_request_input_asset_a": "Please select ASSET A",
+            "alert_request_input_asset_b": "Please select ASSET B",
+            "alert_request_input_pool": "Please select pool",
+            "alert_request_input_taker_fee": "Please input taker fee",
+            "alert_request_input_unstack_fee": "Please input unstacke fee",
+            "alert_taker_fee": "",
+            "alert_unstack_fee": "",
+            "asset_a": "Asset A",
+            "asset_a_balance": "Asset A Balance",
+            "asset_b": "Asset B",
+            "asset_b_balance": "Asset B Balance",
+            "create_pool": "Create Pool",
+            "delete": "Delete",
+            "liquidity_pools": "Liquidity Pools",
+            "pool_balance": "Pool Balance",
+            "pool_name": "Pool Name",
+            "stake_status": "Stake/Unstake",
+            "taker_fee": "Taker Fee",
+            "title": "Pools",
+            "unstake_fee": "Unstake Fee"
+        },
         "login_with": "登录方式",
         "market_actions": "市场活动",
         "market_orders": "市场挂单",
@@ -138,6 +163,7 @@
         "no_order_history": "无挂单历史",
         "no_orders": "暂无挂单",
         "no_price": "--",
+        "no_trades": "No last trades",
         "open_orders": "我的挂单",
         "optional": {
             "formatter": "可选:  {restore_link} 或使用 {restore_form} 注册一个账户.",
@@ -287,8 +313,14 @@
             "decimals": "小数位数",
             "description": "描述",
             "details": "详细",
+            "disable_bsrm_update": "禁止所有者更新BSRM",
+            "disable_collateral_bidding": "禁止全局清算后投标抵押品",
             "disable_confidential": "禁止隐私交易",
             "disable_force_settle": "禁止强制清算",
+            "disable_icr_update": "禁止所有者更新ICR",
+            "disable_mcr_update": "禁止所有者更新MCR",
+            "disable_mssr_update": "禁止所有者更新MSSR",
+            "disable_new_supply": "禁止新增供应量",
             "error_invalid": "该资产不能使用",
             "error_precision": "该资产的精度与 %(asset)s 不同",
             "error_too_deep": "不允许创建一种由bit资产做抵押的三连环抵押的bit资产。",
@@ -307,6 +339,7 @@
             "invalid_market_pair": "优先交易对不能是同一市场。",
             "invalid_permissions_change": "你不能给当前为非零供给的资产签署许可。",
             "issued_assets": "我发行的资产",
+            "lock_max_supply": "锁定最大供应量",
             "market": "优先交易对",
             "market_fee": "市场手续费",
             "max_market_fee": "市场手续费上限",
@@ -343,14 +376,7 @@
             "update_owner_text": "资产发行人可以使用此表单转让资产发行权给其它账户：",
             "visible": "在搜索与市场中隐藏资产",
             "white_list": "要求资产持有人被列入白名单",
-            "witness_fed_asset": "允许见证人提供喂价",
-            "lock_max_supply": "锁定最大供应量",
-            "disable_new_supply": "禁止新增供应量",
-            "disable_mcr_update": "禁止所有者更新MCR",
-            "disable_icr_update": "禁止所有者更新ICR",
-            "disable_mssr_update": "禁止所有者更新MSSR",
-            "disable_bsrm_update": "禁止所有者更新BSRM",
-            "disable_collateral_bidding": "禁止全局清算后投标抵押品"
+            "witness_fed_asset": "允许见证人提供喂价"
         },
         "vesting": {
             "balance_number": "余额 #%(id)s",
@@ -452,8 +478,7 @@
             "white_by": "被列入白名单",
             "whitelist_authorities": "白名单权限",
             "whitelist_market_fee_sharing": "白名单分享市场手续费"
-        },
-        "credit_offer": "借贷管理"
+        }
     },
     "account_browsing_mode": {
         "go_back": "返回我的账户",
@@ -546,6 +571,61 @@
                 "short_custom": "%e %b '%y"
             }
         }
+    },
+    "credit_offer": {
+        "accepted_pawn": "可接受抵押物",
+        "account": "账号",
+        "active": "激活",
+        "add_pawn": "添加抵押物",
+        "add_whitelist": "添加白名单",
+        "asset": "资产",
+        "available_amount": "可借数量",
+        "borrow": "借款",
+        "borrow_amount": "借款数量",
+        "closed": "关闭",
+        "create": "创建P2P抵押贷",
+        "credit_debt_account": "债务账号",
+        "credit_debts": "P2P债务列表",
+        "credit_offers": "P2P抵押贷列表",
+        "credit_right_account": "债权账号",
+        "credit_rights": "P2P债权列表",
+        "current_balance": "剩余可借",
+        "debt": "负债",
+        "edit": "修改P2P抵押贷",
+        "estimated_fee": "预估手续费",
+        "fee_rate": "手续费率",
+        "info_borrow_err": "不能向自己借款！",
+        "list_repay_period": {
+            "period_-1": "No limit",
+            "period_0": "12小时",
+            "period_1": "1天",
+            "period_2": "3天",
+            "period_3": "7天",
+            "period_4": "30天",
+            "period_5": "90天"
+        },
+        "loan_amount": "借款额度",
+        "min_borrow": "最低借款",
+        "mortgage_assets": "抵押资产",
+        "my_debt": "我的负债",
+        "operate": "操作",
+        "operate_delete": "删除",
+        "operate_edit": "修改",
+        "pawn_amount": "抵押数量",
+        "plh_input_asset_name": "请输入资产名...",
+        "plh_select_validity_period": "选择有效期",
+        "price": "价格",
+        "redemption_collateral": "赎回抵押物",
+        "repay": "还款",
+        "repay_period": "还款期限",
+        "status": "状态",
+        "tip_fee_rate": "以百分比表示",
+        "tip_pawn_amount": "每借出一个单位的资产所需要抵押的数量",
+        "title_add_pawn": "添加可抵押资产",
+        "title_add_whitelist": "添加白名单",
+        "total_amount": "总数量",
+        "validity_period": "有效期",
+        "whitelist_account": "白名单账号"
     },
     "customizable_table": {
         "customize_the_columns": "自定义列"
@@ -856,6 +936,7 @@
             },
             "cumulative": "Σ",
             "fee_pool": {
+                "accumulated_collateral_fees": "费用累积抵押品",
                 "claim_balance": "申领手续费池余额",
                 "claim_fees": "领取手续费",
                 "claim_pool_text": "资产发行人可以使用此表单从手续费池中提出资金。",
@@ -869,8 +950,7 @@
                 "title": "手续费池",
                 "unclaimed_issuer_income": "资产所有者未申领收入",
                 "use_asset_as_default_fee": "启用选择的资产为默认手续费支付资产",
-                "use_selected_asset": "使用选择的资产",
-                "accumulated_collateral_fees": "费用累积抵押品"
+                "use_selected_asset": "使用选择的资产"
             },
             "feed_producer": "喂价提供者",
             "feed_producer_text": "已批准的喂价提供者可以采用以下格式发布新喂价:",
@@ -906,34 +986,36 @@
                 "feed_price": "喂价",
                 "global_settlement_price": "全局清算价格",
                 "global_settlement_trigger": "全局清算触发价格",
-                "maintenance_collateral_ratio": "维持抵押率 (MCR)",
-                "maximum_short_squeeze_price": "强平价格 (MSSP)",
-                "maximum_short_squeeze_ratio": "强平惩罚比率 (MSSR)",
-                "min_feeds": "最少喂价者",
-                "settlement_price": "喂价",
-                "title": "喂价",
                 "initial_collateral_ratio": "初始抵押率 (ICR)",
                 "initial_collateral_ratio2": "初始抵押率 (ICR, 由资产所有者设置)",
+                "maintenance_collateral_ratio": "维持抵押率 (MCR)",
                 "maintenance_collateral_ratio2": "维持抵押率 (MCR, 由资产所有者设置)",
-                "maximum_short_squeeze_ratio2": "强平惩罚比率 (MSSR, 由资产所有者设置)",
                 "margin_call_fee_ratio": "追加保证金费用比率 (MCFR)",
-                "median_price_feeds": "喂价中位数"
+                "maximum_short_squeeze_price": "强平价格 (MSSP)",
+                "maximum_short_squeeze_ratio": "强平惩罚比率 (MSSR)",
+                "maximum_short_squeeze_ratio2": "强平惩罚比率 (MSSR, 由资产所有者设置)",
+                "median_price_feeds": "喂价中位数",
+                "min_feeds": "最少喂价者",
+                "settlement_price": "喂价",
+                "title": "喂价"
             },
             "price_feed_data": {
                 "core_exchange_rate": "手续费汇率CER ",
                 "empty": "无有效喂价提供者",
                 "feed_price": "喂价",
+                "initial_collateral_ratio": "初始抵押率ICR",
                 "maintenance_collateral_ratio": "维持抵押率MCR",
                 "maximum_short_squeeze_ratio": "强平惩罚比率MSSR",
                 "published": "发布时间",
                 "publisher": "发布人",
                 "settlement_price": "喂价",
-                "title": "喂价数据",
-                "initial_collateral_ratio": "初始抵押率ICR"
+                "title": "喂价数据"
             },
             "settlement": {
+                "black_swan_response_method": "黑天鹅处理方式",
                 "current_settled": "已被强清量",
                 "delay": "强清延时",
+                "force_settle_fee_percent": "强清费率",
                 "force_settlement": "强制清算",
                 "gs_auto_revive_price": "自动复活价格（没有/有 竞价）",
                 "gs_collateral_valuation": "抵押物评估(带竞价)",
@@ -944,6 +1026,8 @@
                 "gs_revert": "复活中",
                 "gs_revive": "如果喂价大于自动复活价格（包含竞标）或者所有债务都被强清完毕，资产将会自动复活。",
                 "gs_see_actions": "查看资产操作",
+                "individual_settlement_debt": "个人清算债务",
+                "individual_settlement_fund": "个人清算抵押品",
                 "max_settle_volume": "每周期最大强清量",
                 "offset": "补偿已计入",
                 "price": "强清价格",
@@ -951,11 +1035,7 @@
                 "settlement_funds": "强清资金",
                 "settlement_funds_collateral_ratio": "强清资金抵押率",
                 "settlement_price": "强清价格",
-                "title": "强制清算",
-                "force_settle_fee_percent": "强清费率",
-                "black_swan_response_method": "黑天鹅处理方式",
-                "individual_settlement_fund": "个人清算抵押品",
-                "individual_settlement_debt": "个人清算债务"
+                "title": "强制清算"
             },
             "summary": {
                 "asset_type": "资产类型",
@@ -1176,6 +1256,7 @@
             "bitcny": "bitCNY 通常可与真实CNY1：1兑换，可以通过例如 Magic Wallet 提供的网关服务进行充值提现。更多信息请访问 https://www.magicw.net/",
             "bridge": "资产 %(asset)s 由真实资产 %(backed)s 1:1 储备背书。可以通过 CryptoBridge 提供的网关服务进行充值提现。",
             "gdex": "资产 %(asset)s 由真实资产 %(backed)s 1:1 储备背书。可以通过 GDEX 提供的网关服务进行充值提现。",
+            "ioxbank": "The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by ioxbank.com.",
             "open": "资产 %(asset)s 由真实资产 %(backed)s 1:1 储备背书。可以通过 Openledger 提供的网关服务进行充值提现。",
             "rudex": "资产 %(asset)s 由真实资产 %(backed)s 1:1 储备背书。可以通过 Rudex 提供的网关服务进行充值提现。",
             "trade": "资产 %(asset)s 由真实资产 %(backed)s 1:1 储备背书。可以通过 Blocktrades 提供的网关服务进行充值提现。",
@@ -1244,6 +1325,13 @@
         "info": "交易信息",
         "intermediate": "中间账户",
         "inventory": "库存",
+        "ioxbank": {
+            "coming_soon": "Coming soon",
+            "min_amount": "Minimum amount: %(minAmount)s %(symbol)s",
+            "min_amount_error": "Please enter number >= minimum",
+            "support_block": "For support, please contact ioxbank at:",
+            "under_construction": "Under Construction"
+        },
         "limit": "限额: %(amount)s %(symbol)s",
         "limit_withdraw_asset": "最小: %(min)s, 最大: %(max)s",
         "limit_withdraw_asset_max": "最大可提现: %(min)s %(coin)s",
@@ -1263,6 +1351,7 @@
         "purchase_1": "快速简便地从外部钱包使用 %(inputAsset)s 购买 %(outputAsset)s 。这项服务由 <a href='https://blocktrades.us/' target='blank' rel='noopener noreferrer'>Blocktrades</a> 提供",
         "purchase_notice": "转账到这个地址的 %(inputAsset)s 将成为 %(outputAsset)s",
         "purchase_notice_memo": "<b>需要正确填写备注</b>以便将资产存入您的账户中",
+        "purchase_notice_tag": "Tag <b>required</b> for proper routing to your account",
         "receive_account": "收款账户：",
         "recent_deposit": "最近充值",
         "recent_withdraw": "最近提现",
@@ -1345,7 +1434,6 @@
         "deposit-withdraw": "充币/提币",
         "deposit_legacy": "或传统充币",
         "exchange": "交易中心",
-        "p2p_lending": "P2P借贷",
         "explorer": "区块浏览",
         "help": "帮助",
         "insight": "认识",
@@ -1353,8 +1441,10 @@
         "lock_short": "登出",
         "locked_tip": "<br/>点击登录，<br/><br/>关闭浏览器将登出。",
         "logout": "登出",
+        "p2p_lending": "P2P借贷",
         "payments": "转账",
         "payments_legacy": "或传统转账",
+        "poolmart": "Liquidity Pools",
         "settings": "设置",
         "showcases": "特色功能",
         "title": "%(wallet_name)s界面",
@@ -1454,6 +1544,9 @@
             "add_contact": "添加联系人到此列表",
             "show_asset": "显示资产",
             "show_market": "显示市场"
+        },
+        "poolmart": {
+            "title": "Liquidity Pools"
         },
         "power": "登录",
         "question_circle": "帮助",
@@ -1712,6 +1805,7 @@
             "public_key": "Public key",
             "quantity": "数量",
             "submit": "提币",
+            "tag": "tag",
             "withdraw": "提币"
         },
         "witness": {
@@ -1810,11 +1904,6 @@
         "liquidity_pool_deposit": "{account} 增加流动性 #{id}。实际支出 {amount_a}和 {amount_b}。获得 {received}流动性代币。",
         "liquidity_pool_exchange": "{account} 完成交易，支出 {amount_a}，获得 {amount_b}。",
         "liquidity_pool_withdraw": "{account} 减少流动性 #{id}。实际支出 {amount_c}流动性代币。获得 {amount_a}和 {amount_b}。",
-        "samet_fund_create": "{account} 创建 {amount}的闪电贷，手续费率：{fee}。",
-        "samet_fund_update": "{account} 更新闪电贷 #{id}。",
-        "samet_fund_delete": "{account} 删除闪电贷 #{id}，取回 {amount}。",
-        "samet_fund_borrow": "{account} 从闪电贷 #{id} 借出 {amount}。",
-        "samet_fund_repay": "{account} 偿还闪电贷 #{id} {amount}，手续费：{fee}。",
         "no_recent": "近期无交易",
         "override_transfer": "{issuer} 从 {from} 将 {amount} 转账给 {to}",
         "pending": " %(blocks)s 个区块待定",
@@ -1823,6 +1912,11 @@
         "proposal_update": "{account} 更新了交易提议",
         "publish_feed": "{account} 发布了喂价 {price}",
         "reg_account": "{registrar} 登记了账户 {new_account}",
+        "samet_fund_borrow": "{account} 从闪电贷 #{id} 借出 {amount}。",
+        "samet_fund_create": "{account} 创建 {amount}的闪电贷，手续费率：{fee}。",
+        "samet_fund_delete": "{account} 删除闪电贷 #{id}，取回 {amount}。",
+        "samet_fund_repay": "{account} 偿还闪电贷 #{id} {amount}，手续费：{fee}。",
+        "samet_fund_update": "{account} 更新闪电贷 #{id}。",
         "set_proxy": "{account} 将 {proxy} 设置为投票代理",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -1859,6 +1953,29 @@
     "pagination": {
         "newer": "更近",
         "older": "更早"
+    },
+    "poolmart": {
+        "liquidity_pools": {
+            "amount_to_sell": "Amount to sell",
+            "asset_a": "Asset A",
+            "asset_a_qty": "Asset A QTY",
+            "asset_b": "Asset B",
+            "asset_b_qty": "Asset B QTY",
+            "confirm_delete_pool": "Are you sure you want to delete the pool?",
+            "delete_pool": "Delete",
+            "exchange": "Exchange",
+            "min_to_receive": "Min to receive",
+            "need_stake_first": "Need Stake The Pool First!",
+            "pool_id": "Pool Id",
+            "share_asset": "Share Asset",
+            "stake": "Stake",
+            "stake_unstake": "Stake/Unstake",
+            "taker_fee_percent": "Taker Fee",
+            "taker_fee_percent_rate": "Taker Fee Rate",
+            "title": "Pools",
+            "unstake": "Unstake",
+            "withdrawal_fee_percent": "Withdrawal Fee"
+        }
     },
     "prediction": {
         "add_opinion_modal": {
@@ -2574,6 +2691,7 @@
         "sent": "发送",
         "settlement_date": "强清时间",
         "show_more": "显示更多",
+        "title_qrcode": "交易二维码",
         "to": " 提取到",
         "transaction_confirmed": "交易已确认",
         "trxTypes": {
@@ -2613,11 +2731,6 @@
             "credit_offer_create": "P2P抵押贷 创建",
             "credit_offer_delete": "P2P抵押贷 删除",
             "credit_offer_update": "P2P抵押贷 更新",
-            "samet_fund_create": "创建闪电贷",
-            "samet_fund_update": "更新闪电贷",
-            "samet_fund_delete": "删除闪电贷",
-            "samet_fund_borrow": "借出闪电贷",
-            "samet_fund_repay": "偿还闪电贷",
             "custom": "自定义",
             "execute_bid": "执行竞价",
             "fba_distribute": "手续费由担保资产分配",
@@ -2638,6 +2751,11 @@
             "proposal_create": "创建提案",
             "proposal_delete": "删除提案",
             "proposal_update": "更新提案",
+            "samet_fund_borrow": "借出闪电贷",
+            "samet_fund_create": "创建闪电贷",
+            "samet_fund_delete": "删除闪电贷",
+            "samet_fund_repay": "偿还闪电贷",
+            "samet_fund_update": "更新闪电贷",
             "ticket_create": "Create ticket",
             "transfer": "转账",
             "transfer_from_blind": "从隐私账户转出",
@@ -2655,9 +2773,8 @@
         },
         "vesting_balance_create": "创建待解冻余额",
         "view_json": "显示原始 json",
-        "view_qrcode": "显示交易二维码",
         "view_qr": "显示二维码",
-        "title_qrcode": "交易二维码",
+        "view_qrcode": "显示交易二维码",
         "waiting": "等待确认中…",
         "whitelist_states": {
             "black_listed": "加入黑名单",
@@ -2995,59 +3112,5 @@
         "wif_associated_accounts": "关联账户(s)：",
         "wif_import_error": "请输入有效的WIF-钱包导入格式",
         "wif_length_error": "输入长度不正确"
-    },
-    "credit_offer": {
-        "create": "创建P2P抵押贷",
-        "edit": "修改P2P抵押贷",
-        "accepted_pawn": "可接受抵押物",
-        "price": "价格",
-        "operate": "操作",
-        "operate_edit": "修改",
-        "operate_delete": "删除",
-        "whitelist_account": "白名单账号",
-        "loan_amount": "借款额度",
-        "add_pawn": "添加抵押物",
-        "add_whitelist": "添加白名单",
-        "title_add_pawn": "添加可抵押资产",
-        "pawn_amount": "抵押数量",
-        "tip_pawn_amount": "每借出一个单位的资产所需要抵押的数量",
-        "title_add_whitelist": "添加白名单",
-        "account": "账号",
-        "repay_period": "还款期限",
-        "min_borrow": "最低借款",
-        "fee_rate": "手续费率",
-        "tip_fee_rate": "以百分比表示",
-        "validity_period": "有效期",
-        "plh_select_validity_period": "选择有效期",
-        "list_repay_period": {
-            "period_0": "12小时",
-            "period_1": "1天",
-            "period_2": "3天",
-            "period_3": "7天",
-            "period_4": "30天",
-            "period_5": "90天"
-        },
-        "info_borrow_err": "不能向自己借款！",
-        "asset": "资产",
-        "total_amount": "总数量",
-        "available_amount": "可借数量",
-        "mortgage_assets": "抵押资产",
-        "borrow": "借款",
-        "borrow_amount": "借款数量",
-        "current_balance": "剩余可借",
-        "estimated_fee": "预估手续费",
-        "plh_input_asset_name": "请输入资产名...",
-        "credit_offers": "P2P抵押贷列表",
-        "credit_rights": "P2P债权列表",
-        "credit_debts": "P2P债务列表",
-        "status": "状态",
-        "active": "激活",
-        "closed": "关闭",
-        "repay": "还款",
-        "my_debt": "我的负债",
-        "debt": "负债",
-        "redemption_collateral": "赎回抵押物",
-        "credit_right_account": "债权账号",
-        "credit_debt_account": "债务账号"
     }
 }
