Changing *Fee Schedule* to *Fees*

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1216,7 +1216,7 @@
         }
     },
     "fees": {
-        "title": "Fee Schedule"
+        "title": "Fees"
     },
     "footer": {
         "advanced_settings": "Advanced settings",
